update type tokens labels

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1046,6 +1046,16 @@
             "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           }
+        },
+        "symbol": {
+          "default": {
+            "value": "{app.config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "alt": {
+            "value": "{app.config.fontWeight.bold}",
+            "type": "fontWeights"
+          }
         }
       },
       "surface": {
