update subtle component colors

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -268,11 +268,11 @@
             },
             "muted": {
               "type": "color",
-              "value": "hsla({app.config.color.accent.hue.default}, {app.config.color.accent.saturation.default}, 4%, 0.48)"
+              "value": "{app.color.surface.fg.muted}"
             },
             "subtle": {
               "type": "color",
-              "value": "hsla({app.config.color.accent.hue.default}, {app.config.color.accent.saturation.default}, 4%, 0.24)"
+              "value": "{app.color.surface.fg.subtle}"
             },
             "onSolid": {
               "type": "color",
@@ -373,7 +373,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "alpha",
-                    "value": "0.52",
+                    "value": "0.6",
                     "space": "hsl"
                   }
                 }
@@ -386,7 +386,20 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "alpha",
-                    "value": "0.52",
+                    "value": "0.42",
+                    "space": "hsl"
+                  }
+                }
+              }
+            },
+            "subtle": {
+              "type": "color",
+              "value": "{app.color.surface.fg.subtle}",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "0.24",
                     "space": "hsl"
                   }
                 }
@@ -517,11 +530,11 @@
             },
             "muted": {
               "type": "color",
-              "value": "hsla({app.config.color.info.hue.default}, {app.config.color.info.saturation.default}, 40%, {app.config.color.info.alpha.fg.default})"
+              "value": "hsla({app.config.color.info.hue.default}, {app.config.color.info.saturation.default}, 40%, 0.6)"
             },
             "subtle": {
               "type": "color",
-              "value": "hsla({app.config.color.info.hue.default}, {app.config.color.info.saturation.default}, 40%, {app.config.color.info.alpha.fg.default})"
+              "value": "hsla({app.config.color.info.hue.default}, {app.config.color.info.saturation.default}, 40%, 0.32)"
             },
             "onSolid": {
               "type": "color",
@@ -573,7 +586,7 @@
             },
             "subtle": {
               "type": "color",
-              "value": "hsla({app.config.color.success.hue.default}, {app.config.color.success.saturation.translucent}, 28%, {app.config.color.success.alpha.fg.default})"
+              "value": "hsla({app.config.color.success.hue.default}, {app.config.color.success.saturation.translucent}, 28%, 0.32)"
             },
             "onSolid": {
               "type": "color",
@@ -625,7 +638,7 @@
             },
             "subtle": {
               "type": "color",
-              "value": "hsla({app.config.color.warning.hue.default}, {app.config.color.warning.saturation.translucent}, 30%, {app.config.color.warning.alpha.fg.default})"
+              "value": "hsla({app.config.color.warning.hue.default}, {app.config.color.warning.saturation.translucent}, 30%, 0.32)"
             },
             "onSolid": {
               "type": "color",
@@ -673,11 +686,11 @@
             },
             "muted": {
               "type": "color",
-              "value": "hsla({app.config.color.danger.hue.default}, {app.config.color.danger.saturation.translucent}, 45%, {app.config.color.danger.alpha.fg.default})"
+              "value": "hsla({app.config.color.danger.hue.default}, {app.config.color.danger.saturation.translucent}, 45%, 0.6)"
             },
             "subtle": {
               "type": "color",
-              "value": "hsla({app.config.color.danger.hue.default}, {app.config.color.danger.saturation.translucent}, 45%, {app.config.color.danger.alpha.fg.default})"
+              "value": "hsla({app.config.color.danger.hue.default}, {app.config.color.danger.saturation.translucent}, 45%, 0.32)"
             },
             "onSolid": {
               "type": "color",
