--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1544,7 +1544,7 @@
       "control": {
         "text": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "alt": {
@@ -1562,13 +1562,13 @@
             "type": "fontWeights"
           },
           "alt": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           }
         },
         "number": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "alt": {
@@ -1580,7 +1580,7 @@
       "label": {
         "text": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -1590,7 +1590,7 @@
         },
         "number": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "alt": {
@@ -1622,7 +1622,7 @@
         },
         "title": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -1632,7 +1632,7 @@
         },
         "callout": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -1642,7 +1642,7 @@
         },
         "subtitle": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -1672,7 +1672,7 @@
         },
         "footnote": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -1682,7 +1682,7 @@
         },
         "code": {
           "default": {
-            "value": "{app.config.fontWeight.text}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           }
         }
@@ -2320,8 +2320,8 @@
           "value": "Regular",
           "type": "other"
         },
-        "text": {
-          "value": "Text",
+        "book": {
+          "value": "Book",
           "type": "other"
         },
         "medium": {
