--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1263,7 +1263,16 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "{app.color.palette.neutral.low}"
+              "value": "{app.color.palette.neutral.default}",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "0.1",
+                    "space": "hsl"
+                  }
+                }
+              }
             },
             "translucent": {
               "type": "color",
