--- a/tokens/application.json
+++ b/tokens/application.json
@@ -356,6 +356,19 @@
                 }
               }
             }
+          },
+          "strong": {
+            "value": "{app.color.palette.black}",
+            "type": "color",
+            "$extensions": {
+              "studio.tokens": {
+                "modify": {
+                  "type": "alpha",
+                  "value": "0.32",
+                  "space": "hsl"
+                }
+              }
+            }
           }
         },
         "dimmer": {
