--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1280,8 +1280,8 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "alpha",
-                    "value": "0.1",
+                    "type": "lighten",
+                    "value": "0.88",
                     "space": "hsl"
                   }
                 }
@@ -1289,7 +1289,16 @@
             },
             "translucent": {
               "type": "color",
-              "value": "{app.color.component.disabled.bg.solid}"
+              "value": "{app.color.palette.neutral.high}",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "0.04",
+                    "space": "hsl"
+                  }
+                }
+              }
             },
             "tone": {
               "type": "color",
@@ -1303,8 +1312,8 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "alpha",
-                    "value": "0.1",
+                    "type": "lighten",
+                    "value": "0.88",
                     "space": "hsl"
                   }
                 }
@@ -1312,7 +1321,16 @@
             },
             "translucent": {
               "type": "color",
-              "value": "{app.color.component.disabled.border.solid}"
+              "value": "{app.color.palette.neutral.high}",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "0.08",
+                    "space": "hsl"
+                  }
+                }
+              }
             }
           },
           "fg": {
