update type tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1768,15 +1768,15 @@
       "surface": {
         "display": {
           "sm": {
-            "value": "95%",
+            "value": "120%",
             "type": "lineHeights"
           },
           "md": {
-            "value": "90%",
+            "value": "115%",
             "type": "lineHeights"
           },
           "lg": {
-            "value": "85%",
+            "value": "110%",
             "type": "lineHeights"
           }
         },
@@ -2052,15 +2052,15 @@
       "surface": {
         "display": {
           "sm": {
-            "value": "-0.0125rem",
+            "value": "0",
             "type": "letterSpacing"
           },
           "md": {
-            "value": "-0.0375rem",
+            "value": "0",
             "type": "letterSpacing"
           },
           "lg": {
-            "value": "-0.075rem",
+            "value": "0",
             "type": "letterSpacing"
           }
         },
@@ -2498,7 +2498,7 @@
       "letterSpacing": {
         "surface": {
           "title": {
-            "value": "0.01rem",
+            "value": "0",
             "type": "other"
           },
           "body": {
