--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1424,8 +1424,36 @@
           },
           "fg": {
             "solid": {
-              "type": "color",
-              "value": "{app.color.palette.blue.high}"
+              "default": {
+                "type": "color",
+                "value": "{app.color.palette.blue.high}"
+              },
+              "hover": {
+                "type": "color",
+                "value": "{app.color.palette.blue.high}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.config.color.actions.dimmer}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "active": {
+                "type": "color",
+                "value": "{app.color.palette.blue.high}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.config.color.actions.dimmer} * 2",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              }
             },
             "muted": {
               "type": "color",
