wip: color refactor

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -242,7 +242,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{app.config.color.modifier.translucent}",
+                  "value": "{app.config.color.modifier.translucent.border.default}",
                   "space": "hsl"
                 }
               }
@@ -255,7 +255,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{app.config.color.modifier.translucent.hover}",
+                  "value": "{app.config.color.modifier.translucent.border.hover}",
                   "space": "hsl"
                 }
               }
@@ -268,7 +268,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{app.config.color.modifier.translucent.active}",
+                  "value": "{app.config.color.modifier.translucent.border.active}",
                   "space": "hsl"
                 }
               }
